Fix smaller sonarqube issues